Fixed logos section overflow & mobile

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -45,30 +45,6 @@ $between-button-spacing: 2rem;
   bottom: 0;
 }
 
-.logo-section .content  {
-	display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.logos {
-  margin: 0 -1.25rem;
-  padding-top: 5rem;
-
-  svg:not(:hover) path {
-    fill: $dark-gray;
-  }
-
-  .col-3 {
-    padding-bottom: 1.25rem;
-    padding-top: 1.25rem;
-  }
-}
-
-.logo {
-	height: 3rem;
-}
-
-
 .section-logos {
   > .content {
     padding-bottom: 6rem;
@@ -80,7 +56,6 @@ $between-button-spacing: 2rem;
 	}
 
   .logos {
-    margin: 0 -1.25rem;
     padding-top: 5rem;
 
     svg:not(:hover) path {
@@ -101,10 +76,10 @@ $between-button-spacing: 2rem;
 @media screen and (max-width: $tablet-landscape-max) {
   .section-logos {
     .logos {
-      .content {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+      .col-10 {
+        .content {
+          padding: 0rem 3rem;
+        }
       }
 
       .col-3 {
@@ -117,15 +92,11 @@ $between-button-spacing: 2rem;
 @media screen and (max-width: $phone-landscape-max) {
 
   .section-logos {
-
-    // > .content {
-    //   padding-bottom: 2rem;
-    //   padding-top: 4rem;
-    // }
-
-    // .logos {
-    //   padding-top: 2rem;
-    // }
+    .logos {
+      .content {
+        padding: 0;
+      }
+    }
   }
 
   .hero-container {
